[package]
name = "lfu"
version = "0.2.5"
authors = ["NavyaZaveri"]
edition = "2018"
description="An LFU cache implementation"
readme = "README.md"
repository = "https://github.com/NavyaZaveri/lfu-cache"
keywords = ["cache", "algorithms", "lfu"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lfu"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_hash_set = {git="https://github.com/lengyijun/linked-hash-set"}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

